#708: Added Customer Type object and queries